# cli_shortener

./: Cargo.toml  Dockerfile  README.md  TODO.md
.github/workflows/: build.yml
src/: args.rs  controller.rs  db.rs  main.rs  utils.rs
src/db/: tests.rs
templates/: base.html  index.html
