[package]
name = "cli_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
serde = { version = "1.0.159", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
