[package]
name = "cli_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
clap = { version = "4.2.1", features = ["derive"] }
dirs = "5.0.0"
random_word = "0.3.0"
serde = { version = "1.0.159", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "any", "postgres", "sqlite"] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
