[package]
name = "cli_shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.38.0"
axum = "0.6.12"
clap = { version = "4.2.1", features = ["derive"] }
cli-table = "0.4.7"
dirs = "5.0.0"
dotenv = "0.15.0"
pcre2 = "0.2.7"
rand = "0.8.5"
random_word = "0.3.0"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["tokio-rustls", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
